To practice basic matrix operations using NumPy

--- a/NumPyBasicMatrixOperations.ipynb
+++ b/NumPyBasicMatrixOperations.ipynb
@@ -23,7 +23,7 @@
         "\n",
         "* Semestre: Enero-Junio 2026\n",
         "* Profesor: Dr. Vicente García Jiménez\n",
-        "* Alumno: Ricardo Solano Monje\n",
+        "* Alumno: Ricardo Solano Monje.\n",
         "* Matrícula: 266221\n",
         "* Unidad 1\n",
         "* Práctica 4: Manipulación de matrices\n",
