To practice basic matrix operations using NumPy

--- a/NumPyBasicMatrixOperations.ipynb
+++ b/NumPyBasicMatrixOperations.ipynb
@@ -23,7 +23,7 @@
         "\n",
         "* Semestre: Enero-Junio 2026\n",
         "* Profesor: Dr. Vicente García Jiménez\n",
-        "* Alumno: Ricardo Solano Monje.\n",
+        "* Alumno: Ricardo Solano Monje\n",
         "* Matrícula: 266221\n",
         "* Unidad 1\n",
         "* Práctica 4: Manipulación de matrices\n",
@@ -83,7 +83,7 @@
       "id": "8c193770-35b3-4574-bd90-3ee2b93e64d7",
       "metadata": {
         "id": "8c193770-35b3-4574-bd90-3ee2b93e64d7",
-        "outputId": "f9eccabd-008a-4af4-ef27-a25706b810ca"
+        "outputId": "35e92163-c56e-4af6-8493-c3a1a47b27d7"
       },
       "outputs": [
         {
@@ -115,7 +115,7 @@
       "id": "5da47231-8d12-4d5a-bc59-22d7f36e7f8d",
       "metadata": {
         "id": "5da47231-8d12-4d5a-bc59-22d7f36e7f8d",
-        "outputId": "5b2ef04e-18d3-4d1f-c773-328ce5288ea6"
+        "outputId": "f6a057cd-054a-40cb-978a-29c15dfaf0bd"
       },
       "outputs": [
         {
@@ -176,7 +176,7 @@
       "id": "081f27f3-9163-45a1-b5fe-4286200b6727",
       "metadata": {
         "id": "081f27f3-9163-45a1-b5fe-4286200b6727",
-        "outputId": "41c26c4a-c14e-4435-a866-98d89c43caa0"
+        "outputId": "e237840c-3e82-4c8f-f078-b097f89a4d54"
       },
       "outputs": [
         {
@@ -242,7 +242,7 @@
       "id": "386c6121-b6f8-4a08-a5b4-70d76983a3cb",
       "metadata": {
         "id": "386c6121-b6f8-4a08-a5b4-70d76983a3cb",
-        "outputId": "e880f32a-2c96-4030-dfc9-c73920f1beae"
+        "outputId": "27d3dbd2-e08b-469d-cea4-c8b048aa43dd"
       },
       "outputs": [
         {
@@ -310,7 +310,7 @@
       "id": "c032e4ed-c325-43b9-bee5-2830eb89080f",
       "metadata": {
         "id": "c032e4ed-c325-43b9-bee5-2830eb89080f",
-        "outputId": "a58050a1-2ec4-4905-d7f7-94b5f5d99465"
+        "outputId": "66b8b2a7-0db8-4af5-fd27-b7c01d4462ed"
       },
       "outputs": [
         {
@@ -373,7 +373,7 @@
       "id": "f750b4fe-41cd-456a-a513-e618ae14b729",
       "metadata": {
         "id": "f750b4fe-41cd-456a-a513-e618ae14b729",
-        "outputId": "78f05657-ec4b-448a-aabf-46e7d5165dbb"
+        "outputId": "7e46d267-3722-44d8-ef35-edc199162de2"
       },
       "outputs": [
         {
