To practice basic matrix operations using NumPy

--- a/NumPyBasicMatrixOperations.ipynb
+++ b/NumPyBasicMatrixOperations.ipynb
@@ -79,18 +79,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "8c193770-35b3-4574-bd90-3ee2b93e64d7",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "8c193770-35b3-4574-bd90-3ee2b93e64d7",
-        "outputId": "35e92163-c56e-4af6-8493-c3a1a47b27d7"
+        "outputId": "8ce27473-598e-4f8c-aed2-df3726555196"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "NumPy version: 2.4.1\n"
+            "NumPy version: 2.0.2\n"
           ]
         }
       ],
@@ -111,16 +114,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "5da47231-8d12-4d5a-bc59-22d7f36e7f8d",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "5da47231-8d12-4d5a-bc59-22d7f36e7f8d",
-        "outputId": "f6a057cd-054a-40cb-978a-29c15dfaf0bd"
+        "outputId": "f111c38c-0bc3-4fb0-a992-1055f78bb4de"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Matrix A (3, 3):\n",
             "[[ 7  4  8]\n",
@@ -172,16 +178,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "081f27f3-9163-45a1-b5fe-4286200b6727",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "081f27f3-9163-45a1-b5fe-4286200b6727",
-        "outputId": "e237840c-3e82-4c8f-f078-b097f89a4d54"
+        "outputId": "ecc38142-4f2c-4ddf-9319-b63ec7eaf05d"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "1. Matrix Addition C=(A + B)\n",
             "Matrix A:\n",
@@ -238,16 +247,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "386c6121-b6f8-4a08-a5b4-70d76983a3cb",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "386c6121-b6f8-4a08-a5b4-70d76983a3cb",
-        "outputId": "27d3dbd2-e08b-469d-cea4-c8b048aa43dd"
+        "outputId": "83362d48-7c5a-48b2-9ba7-9308fd66ffc3"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "2. Matrix Subtraction C=(A - B)\n",
             "Matrix A:\n",
@@ -306,16 +318,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "c032e4ed-c325-43b9-bee5-2830eb89080f",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "c032e4ed-c325-43b9-bee5-2830eb89080f",
-        "outputId": "66b8b2a7-0db8-4af5-fd27-b7c01d4462ed"
+        "outputId": "f813d540-9aa0-417c-89fc-3b66ab18f7a7"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "3. Scalar Multiplication C=2*A\n",
             "Matrix A:\n",
@@ -369,16 +384,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "f750b4fe-41cd-456a-a513-e618ae14b729",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "f750b4fe-41cd-456a-a513-e618ae14b729",
-        "outputId": "7e46d267-3722-44d8-ef35-edc199162de2"
+        "outputId": "34bea410-de95-479f-902f-12eeb81d9575"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "=== 4. Matrix Multiplication (A · B) ===\n",
             "Matrix A:\n",
@@ -453,7 +471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "fd13890d-2101-483d-9650-8150ee962448",
       "metadata": {
         "id": "fd13890d-2101-483d-9650-8150ee962448"
