--- a/NumPyBasicMatrixOperations.ipynb
+++ b/NumPyBasicMatrixOperations.ipynb
@@ -21,14 +21,14 @@
         "\n",
         "Curso: *Programación para Analítica Descriptiva y Predictiva*\n",
         "\n",
-        "* Semestre: Enero-Junio 2026\n",
-        "* Profesor: Dr. Vicente García Jiménez\n",
-        "* Alumno: Ricardo Solano Monje\n",
-        "* Matrícula: 266221\n",
-        "* Unidad 1\n",
-        "* Práctica 4: Manipulación de matrices\n",
+        "* Semestre: Enero-Junio 2026.\n",
+        "* Profesor: Dr. Vicente García Jiménez.\n",
+        "* Alumno: Ricardo Solano Monje.\n",
+        "* Matrícula: 266221.\n",
+        "* Unidad 1.\n",
+        "* Práctica 4: Manipulación de matrices.\n",
         "* Objetivo de la práctica: Usar NumPy para crear matrices y realizar algunas operaciones básicas sobre éstas.\n",
-        "* Programa realizado por: Ricardo Solano Monje"
+        "* Realizado por: Ricardo Solano Monje."
       ]
     },
     {
@@ -43,9 +43,9 @@
         "### Manipulación de matrices.\n",
         "\n",
         "* Crea dos matrices de 3x3 con números aleatorios entre 1 y 10. *Realiza las siguientes operaciones:*\n",
-        "  * Suma ambas matrices.\n",
-        "  * Resta la segunda matriz de la primera.\n",
-        "  * Multiplica la primera matriz por 2.\n",
+        "  * Suma ambas matrices,\n",
+        "  * Resta la segunda matriz de la primera,\n",
+        "  * Multiplica la primera matriz por 2,\n",
         "  * Realiza una multiplicación matricial entre las dos matrices."
       ]
     },
@@ -86,7 +86,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8c193770-35b3-4574-bd90-3ee2b93e64d7",
-        "outputId": "8ce27473-598e-4f8c-aed2-df3726555196"
+        "outputId": "37d74a26-c92d-4d1e-c668-f291e5a6f1a6"
       },
       "outputs": [
         {
@@ -121,7 +121,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5da47231-8d12-4d5a-bc59-22d7f36e7f8d",
-        "outputId": "f111c38c-0bc3-4fb0-a992-1055f78bb4de"
+        "outputId": "5f05406c-bddd-41d6-8620-b0be767aa125"
       },
       "outputs": [
         {
@@ -185,7 +185,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "081f27f3-9163-45a1-b5fe-4286200b6727",
-        "outputId": "ecc38142-4f2c-4ddf-9319-b63ec7eaf05d"
+        "outputId": "4bcd3125-85f4-4682-82e2-339a9ea7803d"
       },
       "outputs": [
         {
@@ -254,7 +254,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "386c6121-b6f8-4a08-a5b4-70d76983a3cb",
-        "outputId": "83362d48-7c5a-48b2-9ba7-9308fd66ffc3"
+        "outputId": "e0c12df8-aa13-44e0-842f-bfae766d3cce"
       },
       "outputs": [
         {
@@ -325,7 +325,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c032e4ed-c325-43b9-bee5-2830eb89080f",
-        "outputId": "f813d540-9aa0-417c-89fc-3b66ab18f7a7"
+        "outputId": "f2fa1cff-1ebc-46d6-841e-f4de311dad35"
       },
       "outputs": [
         {
@@ -363,7 +363,7 @@
         "print(\"\\nC=2*A:\")\n",
         "print(matrixC)\n",
         "\n",
-        "# Using np.multiply() method\n",
+        "# Using np.multiply() method, old fashion approach.\n",
         "matrixC2 = np.multiply(matrixA, 2)\n",
         "print(\"\\nUsing np.multiply(matrixA, 2):\")\n",
         "print(matrixC2)\n",
@@ -391,7 +391,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f750b4fe-41cd-456a-a513-e618ae14b729",
-        "outputId": "34bea410-de95-479f-902f-12eeb81d9575"
+        "outputId": "ec94c64e-eb78-48b4-ca7f-08b994e6658c"
       },
       "outputs": [
         {
@@ -440,12 +440,13 @@
         "print(\"\\nMatrix B:\")\n",
         "print(matrixB)\n",
         "\n",
-        "# Matrix multiplication (dot product)\n",
+        "# Matrix multiplication (dot product), old fashion\n",
         "matrixC = np.dot(matrixA, matrixB)\n",
         "print(\"\\nC=(A · B):\")\n",
         "print(matrixC)\n",
         "\n",
         "# Alternative method using @ operator, it acts as operator overloading, easier to read in math formulas!\n",
+        "# The @ (matrix multiplication) operator was introduced in Python 3.5\n",
         "matrixC2 = matrixA @ matrixB\n",
         "print(\"\\nUsing @ operator: C= (A @ B)\")\n",
         "print(matrixC2)\n",
